# autonomous_husky

./: .gitignore  CHANGELOG.md  README.md  bash_aliases.txt  og_nuc_output.csv  preflight.py  setup_NUC.sh  setup_this.sh
catkin_ws/src/FAST_LIO/Log/: mat_pre.txt
catkin_ws/src/FAST_LIO/blind_chg/: README.md  laserMapping.cpp  preprocess.cpp  preprocess.h
catkin_ws/src/FAST_LIO/config/: ouster64.yaml
catkin_ws/src/FAST_LIO/launch/: mapping_ouster64.launch
catkin_ws/src/aede/: .gitignore
catkin_ws/src/aede/src/loam_interface/launch/: loam_interface.launch
catkin_ws/src/aede/src/local_planner/src/: pathFollower.cpp
catkin_ws/src/husky-noetic-devel/husky_base/launch/: base.launch
catkin_ws/src/husky-noetic-devel/husky_control/config/: localization.yaml
catkin_ws/src/husky-noetic-devel/husky_control/launch/: control.launch  teleop.launch
catkin_ws/src/ouster-ros/launch/: sensor.launch
catkin_ws/src/startup/: CMakeLists.txt  package.xml
catkin_ws/src/startup/config/: config.yaml
catkin_ws/src/startup/launch/: autonomous_husky_startup.launch  blind_cuboid_husky.launch  husky_autonomous.launch  run_tare.launch  visualization_aede.launch  visualize.launch  visualize_aede.launch  visualize_tare.launch
catkin_ws/src/startup/src/: BlindingCuboid.py  twist_unstamp.cpp
catkin_ws/src/tare-noetic/: .gitignore
catkin_ws/src/tare-noetic/tare_planner/config/: husky.yaml
catkin_ws/src/tare-noetic/tare_planner/data/: carpark_boundary.ply  carpark_boundary_corner.ply  smaller_carpark.ply
catkin_ws/src/tare-noetic/tare_planner/launch/: explore_husky.launch
(+17 files in other folders)
